--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,6 @@ body {
 
 /* Define the custom cursor */
 .custom-cursor {
-  cursor: url('https://previews.123rf.com/images/shock77/shock771603/shock77160300043/53432391-angry-ape-showing-middle-finger.jpg') 25 25, auto; /* Replace 'monkey_cursor.png' with your image */
+  cursor: url('https://image.shutterstock.com/image-photo/young-green-anaconda-aka-eunectus-260nw-1884926236.png') 25 25, auto; /* Replace 'monkey_cursor.png' with your image */
  
 }
