--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  
+ cursor: url('https://image.shutterstock.com/image-photo/young-green-anaconda-aka-eunectus-260nw-1884926236.png'),auto; 
 }
 
 .container {
@@ -16,8 +16,3 @@ body {
   font-size: 24px;
 }
 
-/* Define the custom cursor */
-.custom-cursor {
-  cursor: url('https://image.shutterstock.com/image-photo/young-green-anaconda-aka-eunectus-260nw-1884926236.png') 25 25, auto; /* Replace 'monkey_cursor.png' with your image */
- 
-}
