--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
- cursor: url('https://image.shutterstock.com/image-photo/young-green-anaconda-aka-eunectus-260nw-1884926236.png'),auto; 
+ cursor: url('cursor.cur'),auto; 
 }
 
 .container {
