--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,44 @@
-body {
- cursor: url('cursor.cur'),auto 32 32,pointer; 
+body{
+  background-color: #171717;
+  height: 120vh;
+  ;
+}
+.small{
+  width: 6px;
+  height: 6px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+}
+.big{
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 50%;
+  margin-bottom: 20rem;
+  animation-name: stretch;
+            animation-duration: 2.0s;
+            animation-timing-function: ease-out;
+            animation-direction: alternate;
+            animation-iteration-count: infinite;
+            animation-play-state: running;
 }
 
-.container {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-family: Arial, sans-serif;
-  color: #333;
-}
 
-.container h1 {
-  font-size: 24px;
-}
+@keyframes stretch {
+            0% {
+               
+                opacity: 0.2;
+                background-color: green;
+                border-radius: 100%;
+            }
+  
+            50% {
+                background-color: orange;
+            }
+  
+            100% {
+                transform: scale(2.0);
+                background-color: red;
+            }
+        }
 
